# mlflow-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml
mlflow_mcp_server/: __main__.py  server.py
mlflow_mcp_server/tools/: experiment_tools.py  registered_models.py  run_tools.py
mlflow_mcp_server/utils/: mlflow_client.py
