[project]
name = "mlflow-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.2",
    "mlflow==2.20.3",
    "pydantic>=2.11.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mlflow_mcp_server = "mlflow_mcp_server.__main__:main"
